--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/questionario/index.jsx"
+  ],
   "exclude": ["node_modules"]
 }
